Preserve encounter order in immutable sets