@@ -20,11 +20,11 @@ import com.bytequay.app.developmentflow.execution.ExecutionPorts;
 import com.bytequay.app.developmentflow.execution.WorktreeWriterLeaseManager;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableSet;
 
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
-import java.util.Set;
 
 import static com.bytequay.app.developmentflow.execution.CapacityManager.CapacityLane.LOCAL_GIT;
 import static com.bytequay.app.developmentflow.execution.CapacityManager.WorkflowSource.V2;
@@ -162,7 +162,7 @@ public final class LocalPublishBaseSyncOperationHandler
                 && operation.expectedBaseSha().equals(fence.expectedBaseSha())
                 && operation.operationId().equals(capacity.operationId())
                 && capacity.source() == V2
-                && capacity.lanes().equals(Set.of(LOCAL_GIT))
+                && capacity.lanes().equals(ImmutableSet.of(LOCAL_GIT))
                 && !capacity.trunkControl()
                 && capacity.exclusiveTask()
                 && capacity.writerRequired()
